[gd_scene load_steps=30 format=3 uid="uid://bnxmf8waol6sn"]

[ext_resource type="Script" uid="uid://ch6w73q33dyfw" path="res://scripts/ship.gd" id="1_4cq66"]
[ext_resource type="Texture2D" uid="uid://dce27bg1v22ms" path="res://assets/Player Sprites/Normal Ship.png" id="2_bseor"]
[ext_resource type="AudioStream" uid="uid://cq0clurffltcp" path="res://assets/explosion (1).wav" id="3_4tobq"]
[ext_resource type="Texture2D" uid="uid://d2ccys1sqtotn" path="res://assets/Player Sprites/Left On.png" id="3_tlr80"]
[ext_resource type="Texture2D" uid="uid://dsavvayga4hq7" path="res://assets/Player Sprites/Damaged ship 01.png" id="3_vbj2c"]
[ext_resource type="Texture2D" uid="uid://cfb35ms0icpm7" path="res://assets/Player Sprites/Right On.png" id="4_bseor"]
[ext_resource type="Texture2D" uid="uid://beojk2jnpfjau" path="res://assets/Player Sprites/Damaged ship 02.png" id="4_dschd"]
[ext_resource type="AudioStream" uid="uid://bytb16bo7x7cq" path="res://assets/crunch.wav" id="4_tfsc7"]
[ext_resource type="Texture2D" uid="uid://baxum3a5xt7qe" path="res://assets/Player Sprites/Damaged ship 03.png" id="5_83dbu"]
[ext_resource type="AudioStream" uid="uid://b7yi4rbqxj46j" path="res://assets/boost.wav" id="5_gudjc"]
[ext_resource type="Texture2D" uid="uid://nyq1mlw0e3p5" path="res://assets/Player Sprites/Both On.png" id="5_tlr80"]
[ext_resource type="AudioStream" uid="uid://cfuv7uwm8tjwd" path="res://assets/eating.wav" id="6_7j21i"]
[ext_resource type="AudioStream" uid="uid://c620jbc4op8o2" path="res://assets/Out Of Ammo   No Ammo SOUND Effect.mp3" id="7_3m36u"]
[ext_resource type="Script" uid="uid://b8k1urgk4rma7" path="res://scenes/label_holder.gd" id="8_8qiel"]
[ext_resource type="Texture2D" uid="uid://ds3bpyhv0dnsx" path="res://assets/light.png" id="12_03y04"]
[ext_resource type="Texture2D" uid="uid://b25yo0vlxbb0c" path="res://assets/kenney_smoke-particles/PNG/Explosion/explosion00.png" id="13_48mkp"]
[ext_resource type="Texture2D" uid="uid://dspirnem1f7gq" path="res://assets/kenney_smoke-particles/PNG/Flash/flash01.png" id="14_tbq4g"]
[ext_resource type="FontFile" uid="uid://xgdbuastqrqp" path="res://assets/Space Stuff 2/Enemy/UI/Font/alien_3_font copy.otf" id="15_swuwe"]
[ext_resource type="AudioStream" uid="uid://bas327my7h5pi" path="res://assets/woosh.wav" id="18_dschd"]
[ext_resource type="Texture2D" uid="uid://co7r3yebsii4e" path="res://assets/Space Stuff 2/Player Sprites/pixil-frame-0-77.png" id="19_83dbu"]
[ext_resource type="Texture2D" uid="uid://b8hcebarj2mf1" path="res://assets/kenney_smoke-particles/PNG/Explosion/explosion03.png" id="20_xifwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlr80"]
size = Vector2(160, 265)

[sub_resource type="Animation" id="Animation_03y04"]
length = 0.001

[sub_resource type="Animation" id="Animation_tlr80"]
resource_name = "boost"
length = 0.08
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Damage1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Damage2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Damage3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_48mkp"]
resource_name = "thrust"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Damage1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Damage2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Damage3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_48mkp"]
_data = {
&"RESET": SubResource("Animation_03y04"),
&"boost": SubResource("Animation_tlr80"),
&"thrust": SubResource("Animation_48mkp")
}

[sub_resource type="Gradient" id="Gradient_48mkp"]
offsets = PackedFloat32Array(0, 0.566667, 1)
colors = PackedColorArray(1, 0.24524, 0.187846, 1, 0.866667, 0.807843, 0, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_tbq4g"]
offsets = PackedFloat32Array(0, 0.826667, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_swuwe"]
offsets = PackedFloat32Array(0, 0.754448, 1)
colors = PackedColorArray(0.937255, 0.423529, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0)

[node name="Ship" type="CharacterBody2D" groups=["Ship"]]
script = ExtResource("1_4cq66")

[node name="ShadowHolder" type="Node2D" parent="."]
position = Vector2(20, -30)

[node name="ShadowSprite" type="Sprite2D" parent="ShadowHolder"]
modulate = Color(0, 0, 0, 0.247059)
position = Vector2(0, 100)
scale = Vector2(4, 4.2)
texture = ExtResource("2_bseor")
hframes = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 21.5)
shape = SubResource("RectangleShape2D_tlr80")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(4, 4.2)
texture = ExtResource("2_bseor")
hframes = 4
metadata/_edit_lock_ = true

[node name="Damage1" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
scale = Vector2(4, 4.2)
texture = ExtResource("3_vbj2c")
hframes = 4
metadata/_edit_lock_ = true

[node name="Damage2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
scale = Vector2(4, 4.2)
texture = ExtResource("4_dschd")
hframes = 4
metadata/_edit_lock_ = true

[node name="Damage3" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
scale = Vector2(4, 4.2)
texture = ExtResource("5_83dbu")
hframes = 4
metadata/_edit_lock_ = true

[node name="Left" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
scale = Vector2(4, 4.2)
texture = ExtResource("3_tlr80")

[node name="Right" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
scale = Vector2(4, 4.2)
texture = ExtResource("4_bseor")
metadata/_edit_lock_ = true

[node name="Both" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 40)
scale = Vector2(4, 4.2)
texture = ExtResource("5_tlr80")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4tobq")
volume_db = 5.0
metadata/_edit_lock_ = true

[node name="SelfCannibalizationTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CrunchSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tfsc7")
volume_db = 15.0
metadata/_edit_lock_ = true

[node name="BoostSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gudjc")
volume_db = -15.0
metadata/_edit_lock_ = true

[node name="EatingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7j21i")
metadata/_edit_lock_ = true

[node name="OutOfFoodSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3m36u")
volume_db = 10.0
metadata/_edit_lock_ = true

[node name="LabelHolder" type="Node2D" parent="."]
script = ExtResource("8_8qiel")
metadata/_edit_lock_ = true

[node name="ControlLabel" type="Label" parent="LabelHolder"]
offset_left = -442.0
offset_top = -410.0
offset_right = 439.0
offset_bottom = -199.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("15_swuwe")
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1
vertical_alignment = 1

[node name="BulletSpawnPositions" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="BulletSpawnPositions"]
position = Vector2(-55, -111)

[node name="Marker2D2" type="Marker2D" parent="BulletSpawnPositions"]
position = Vector2(-2, -120)

[node name="Marker2D3" type="Marker2D" parent="BulletSpawnPositions"]
position = Vector2(51, -113)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_48mkp")
}

[node name="PowerLight" type="PointLight2D" parent="."]
position = Vector2(0, 7)
color = Color(1, 0.194376, 0.144153, 1)
texture = ExtResource("12_03y04")
texture_scale = 0.25

[node name="FireLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(-126, 0)
texture = ExtResource("12_03y04")
texture_scale = 0.5

[node name="FireLight2" type="PointLight2D" parent="."]
visible = false
position = Vector2(59, 110)
texture = ExtResource("12_03y04")
texture_scale = 0.5

[node name="FireLight3" type="PointLight2D" parent="."]
visible = false
position = Vector2(-49, 54)
texture = ExtResource("12_03y04")
texture_scale = 0.5

[node name="FireLight4" type="PointLight2D" parent="."]
position = Vector2(-7, 90)
energy = 0.3
texture = ExtResource("12_03y04")

[node name="OverallLight" type="PointLight2D" parent="."]
position = Vector2(-3, -102)
color = Color(1, 0.814479, 0.495728, 1)
energy = 0.3
texture = ExtResource("12_03y04")
metadata/_edit_lock_ = true

[node name="LeftParticleThrust" type="CPUParticles2D" parent="."]
position = Vector2(-129, 222)
emitting = false
amount = 40
texture = ExtResource("13_48mkp")
lifetime = 1.5
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2(0, 250)
angle_min = -360.0
angle_max = 360.0
scale_amount_min = 0.08
scale_amount_max = 0.13
color_ramp = SubResource("Gradient_48mkp")
metadata/_edit_lock_ = true

[node name="RightParticleThrust" type="CPUParticles2D" parent="."]
position = Vector2(124, 216)
emitting = false
amount = 40
texture = ExtResource("13_48mkp")
lifetime = 1.5
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2(0, 250)
angle_min = -360.0
angle_max = 360.0
scale_amount_min = 0.08
scale_amount_max = 0.13
color_ramp = SubResource("Gradient_48mkp")
metadata/_edit_lock_ = true

[node name="LeftParticleBoost" type="CPUParticles2D" parent="."]
position = Vector2(-128, 218)
emitting = false
amount = 80
texture = ExtResource("14_tbq4g")
randomness = 0.42
spread = 180.0
gravity = Vector2(0, 50)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.08
scale_amount_max = 0.12
color_ramp = SubResource("Gradient_tbq4g")
metadata/_edit_lock_ = true

[node name="RightParticleBoost" type="CPUParticles2D" parent="."]
position = Vector2(126, 218)
emitting = false
amount = 80
texture = ExtResource("14_tbq4g")
randomness = 0.42
spread = 180.0
gravity = Vector2(0, 50)
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.08
scale_amount_max = 0.12
color_ramp = SubResource("Gradient_tbq4g")
metadata/_edit_lock_ = true

[node name="Woosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_dschd")
volume_db = -18.94
metadata/_edit_lock_ = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-129, 213)
scale = Vector2(5.025, 6.185)
color = Color(0.928691, 0.00969697, 0.00860019, 1)
energy = 0.4
texture = ExtResource("19_83dbu")
texture_scale = 1.5
metadata/_edit_lock_ = true

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(127, 214)
scale = Vector2(5.025, 6.185)
color = Color(0.999703, 0.518304, 0.452866, 1)
energy = 0.4
texture = ExtResource("19_83dbu")
texture_scale = 1.5
metadata/_edit_lock_ = true

[node name="DamageParticle1" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(-126, 16)
amount = 30
texture = ExtResource("20_xifwb")
lifetime = 0.2
emission_shape = 1
emission_sphere_radius = 16.48
direction = Vector2(-1, 0)
spread = 80.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 100.0
scale_amount_min = 0.03
scale_amount_max = 0.05
color_ramp = SubResource("Gradient_swuwe")

[node name="DamageParticle2" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(51, 109)
amount = 40
texture = ExtResource("20_xifwb")
lifetime = 0.2
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector2(-1, 0)
spread = 80.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 120.0
scale_amount_min = 0.04
scale_amount_max = 0.06
color_ramp = SubResource("Gradient_swuwe")

[node name="DamageParticle3" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(-56, 73)
amount = 40
texture = ExtResource("20_xifwb")
lifetime = 0.2
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector2(-1, 0)
spread = 80.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 120.0
scale_amount_min = 0.04
scale_amount_max = 0.06
color_ramp = SubResource("Gradient_swuwe")

[connection signal="timeout" from="SelfCannibalizationTimer" to="." method="_on_self_cannibalization_timer_timeout"]
